--- a/Camper_news/camper_news.css
+++ b/Camper_news/camper_news.css
@@ -21,9 +21,9 @@ h3{
 }
 
 img{
-  width: 40px; 
-  height: 30px; 
-  float: left; 
+ width: 40px; 
+ height: 30px; 
+ float: left; 
 }
 #display{
   background: white;
@@ -62,4 +62,16 @@ span{
 }
 #snippet{
   display: inline-block;
+}
+@media(max-width: 770px) {
+  #top{
+    width: 100%;
+    text-align: center;
+    position: relative;
+    padding-bottom: 20px;
+  }
+  #display{
+    float: none;
+    margin: 0 auto;
+  }
 }
